plugin: Absolute links and capitalization fixes

--- a/content/plugin/framework/index.mdx
+++ b/content/plugin/framework/index.mdx
@@ -30,5 +30,5 @@ The plugin framework is a new way to develop Terraform Plugins on [Protocol Vers
 
 ## Combine or Translate
 
-* [Combine your provider](../mux/combine-protocol-version-6-providers) with other [protocol version 6](../how-terraform-works#protocol-version-6) providers.
-* [Translate your provider](../mux/translate-protocol-version-6-to-5) into a [protocol version 5](../how-terraform-works#protocol-version-5) provider for compatibility with Terraform 0.12 and later. [Protocol version 6](../how-terraform-works#protocol-version-6) features cannot be used.
+* [Combine your provider](/plugin/mux/combining-protocol-version-6-providers) with other [protocol version 6](/plugin/how-terraform-works#protocol-version-6) providers.
+* [Translate your provider](/plugin/mux/translating-protocol-version-6-to-5) into a [protocol version 5](/plugin/how-terraform-works#protocol-version-5) provider for compatibility with Terraform 0.12 and later. [Protocol version 6](/plugin/how-terraform-works#protocol-version-6) features cannot be used.
