--- a/content/plugin/how-terraform-works.mdx
+++ b/content/plugin/how-terraform-works.mdx
@@ -127,10 +127,10 @@ Protocol version 6 is compatible with Terraform CLI version 1.0 and later. Proto
 
 Implementations include:
 
-* [terraform-plugin-framework](./framework): A higher-level SDK that makes Terraform provider development easier by abstracting implementation details.
+* [terraform-plugin-framework](/plugin/framework): A higher-level SDK that makes Terraform provider development easier by abstracting implementation details.
 * [terraform-plugin-go tf6server](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov6/tf6server): A lower-level SDK to develop Terraform providers for more advanced use cases.
-* [tf5to6server](./mux/translating-protocol-version-5-to-6): A package to translate protocol version 5 providers into protocol version 6.
-* [tf6muxserver](./mux/combining-protocol-version-6-providers): A package to combine multiple protocol version 6 providers.
+* [tf5to6server](/plugin/mux/translating-protocol-version-5-to-6): A package to translate protocol version 5 providers into protocol version 6.
+* [tf6muxserver](/plugin/mux/combining-protocol-version-6-providers): A package to combine multiple protocol version 6 providers.
 
 ### Protocol Version 5
 
@@ -138,10 +138,10 @@ Protocol version 5 is compatible with Terraform CLI version 0.12 and later.
 
 Implementations include:
 
-* [terraform-plugin-sdk/v2](./sdkv2/sdkv2-intro): A higher-level SDK that makes Terraform provider development easier by abstracting implementation details.
+* [terraform-plugin-sdk/v2](/plugin/sdkv2/sdkv2-intro): A higher-level SDK that makes Terraform provider development easier by abstracting implementation details.
 * [terraform-plugin-go tf5server](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov5/tf5server): A lower-level SDK to develop Terraform providers for more advanced use cases.
-* [tf6to5server](./mux/translating-protocol-version-6-to-5): A package to translate protocol version 6 providers into protocol version 5.
-* [tf5muxserver](./mux/combining-protocol-version-5-providers): A package to combine multiple protocol version 5 providers.
+* [tf6to5server](/plugin/mux/translating-protocol-version-6-to-5): A package to translate protocol version 6 providers into protocol version 5.
+* [tf5muxserver](/plugin/mux/combining-protocol-version-5-providers): A package to combine multiple protocol version 5 providers.
 
 [0]: https://en.wikipedia.org/wiki/Static_build#Static_building
 
