--- a/content/plugin/which-sdk.mdx
+++ b/content/plugin/which-sdk.mdx
@@ -16,7 +16,7 @@ This guide will help you decide whether you should continue using SDKv2, or begi
 
 ## Are You Writing a New Provider or Maintaining an Existing Provider?
 
-If you maintain a large existing provider, we recommend that you begin migrating from SDKv2 to the framework by developing new resources and data sources with the framework. You can use [terraform-plugin-mux](./mux) to refactor the provider over time. Refer to the [Migrate to Terraform Plugin Framework](./sdkv2/sdkv2-intro#migrate-to-terraform-plugin-framework) documentation for more details.
+If you maintain a large existing provider, we recommend that you begin migrating from SDKv2 to the framework by developing new resources and data sources with the framework. You can use [terraform-plugin-mux](/plugin/mux) to refactor the provider over time. Refer to the [Migrate to Terraform Plugin Framework](/plugin/sdkv2/sdkv2-intro#migrate-to-terraform-plugin-framework) documentation for more details.
 
 If you are developing a new provider, you should consider building it entirely with the framework.
 
