--- a/content/plugin/mux/combining-protocol-version-6-providers.mdx
+++ b/content/plugin/mux/combining-protocol-version-6-providers.mdx
@@ -6,12 +6,12 @@ description: >-
 
 # Combining Protocol Version 6 Providers
 
-The [`tf6muxserver`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mux/tf6muxserver) package enables combining any number of [protocol version 6 provider servers](../how-terraform-works#protocol-version-6) into a single server.
+The [`tf6muxserver`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mux/tf6muxserver) package enables combining any number of [protocol version 6 provider servers](/plugin/how-terraform-works#protocol-version-6) into a single server.
 
 Use this package to:
 
 * Support multiple development teams across separate codebases.
-* Support multiple provider SDK implementations. For example, you could upgrade an existing [terraform-plugin-sdk/v2](../sdkv2/sdkv2-intro) provider to protocol version 6 and then combine it with one or more providers built with [terraform-plugin-framework](../framework).
+* Support multiple provider SDK implementations. For example, you could upgrade an existing [terraform-plugin-sdk/v2](/plugin/sdkv2/sdkv2-intro) provider to protocol version 6 and then combine it with one or more providers built with [terraform-plugin-framework](/plugin/framework).
 
 ## Compatibility
 
@@ -19,9 +19,9 @@ Protocol version 6 provider servers are compatible with Terraform CLI 1.0 and la
 
 The following provider server implementations are supported:
 
-* [terraform-plugin-framework](../framework/): A higher-level SDK that makes Terraform provider development easier by abstracting implementation details.
+* [terraform-plugin-framework](/plugin/framework/): A higher-level SDK that makes Terraform provider development easier by abstracting implementation details.
 * [terraform-plugin-go tf6server](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov6/tf6server): Develop Terraform providers for advanced use cases with a lower-level SDK.
-* [tf5to6server](./translating-protocol-version-5-to-6): Translate protocol version 5 providers into protocol version 6.
+* [tf5to6server](/plugin/mux/translating-protocol-version-5-to-6): Translate protocol version 5 providers into protocol version 6.
 
 ## Requirements
 
@@ -101,7 +101,7 @@ func main() {
 
 ## Testing Implementation
 
-You can test individual providers using the same [acceptance tests](../sdkv2/testing/acceptance-tests) as before. Set the [`ProtoV6ProviderFactories` field of `TestCase`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource#TestCase.ProtoV6ProviderFactories) to use the acceptance testing framework available in [terraform-provider-sdk/v2/helper/resource](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource).
+You can test individual providers using the same [acceptance tests](/plugin/sdkv2/testing/acceptance-tests) as before. Set the [`ProtoV6ProviderFactories` field of `TestCase`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource#TestCase.ProtoV6ProviderFactories) to use the acceptance testing framework available in [terraform-provider-sdk/v2/helper/resource](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource).
 
 The following example uses the acceptance testing framework to create a test for two providers.
 
@@ -133,4 +133,4 @@ resource.Test(t, resource.TestCase{
 })
 ```
 
-Refer to the [acceptance tests](../sdkv2/testing/acceptance-tests) documentation for more details.
+Refer to the [acceptance tests](/plugin/sdkv2/testing/acceptance-tests) documentation for more details.
