--- a/content/plugin/sdkv2/sdkv2-intro.mdx
+++ b/content/plugin/sdkv2/sdkv2-intro.mdx
@@ -5,7 +5,7 @@ description: Learn about version 2 of the Terraform Plugin SDK.
 
 # Terraform Plugin SDKv2
 
-Terraform Plugin SDKv2 is an established way to develop Terraform Plugins on [Protocol Version 5](/plugin/how-terraform-works#terraform-plugin-protocol).
+Terraform Plugin SDKv2 is an established way to develop Terraform Plugins on [protocol version 5](/plugin/how-terraform-works#terraform-plugin-protocol).
 
 ~> **Important**: [Which SDK Should I Use?](/plugin/which-sdk) explains the differences between Terraform Plugin SDKv2 and [Terraform Plugin Framework](/plugin/framework) to help you decide which option is right for your provider.
 
