--- a/content/plugin/mux/translating-protocol-version-5-to-6.mdx
+++ b/content/plugin/mux/translating-protocol-version-5-to-6.mdx
@@ -19,8 +19,8 @@ Protocol version 6 provider servers are compatible with Terraform CLI 1.0 and la
 
 The following provider server implementations are supported:
 
-* [terraform-plugin-sdk/v2](/plugin/sdkv2/sdkv2-intro): Develop Terraform providers with a higher-level SDK.
-* [terraform-plugin-go tf5server](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov5/tf5server): Develop Terraform providers for advanced use cases with a lower-level SDK.
+* [terraform-plugin-sdk/v2](/plugin/sdkv2/sdkv2-intro): A higher-level SDK that makes Terraform provider development easier by abstracting implementation details.
+* [terraform-plugin-go tf5server](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov5/tf5server): A lower-level SDK to develop Terraform providers for more advanced use cases.
 
 ## Requirements
 
