--- a/content/plugin/mux/translating-protocol-version-6-to-5.mdx
+++ b/content/plugin/mux/translating-protocol-version-6-to-5.mdx
@@ -19,8 +19,8 @@ Protocol version 5 provider servers are compatible with Terraform CLI 0.12 and l
 
 The following provider server implementations are supported:
 
-* [terraform-plugin-framework](/plugin/framework): Develop Terraform providers with a higher-level SDK.
-* [terraform-plugin-go tf6server](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov6/tf6server): Develop Terraform providers for advanced use cases with a lower-level SDK.
+* [terraform-plugin-framework](/plugin/framework): A higher-level SDK that makes Terraform provider development easier by abstracting implementation details.
+* [terraform-plugin-go tf6server](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tfprotov6/tf6server): A lower-level SDK to develop Terraform providers for more advanced use cases.
 
 ## Requirements
 
