--- a/content/plugin/framework/index.mdx
+++ b/content/plugin/framework/index.mdx
@@ -7,7 +7,7 @@ description: |-
 
 # Terraform Plugin Framework
 
-The plugin framework is a new way to develop Terraform Plugins on [protocol version 6](/plugin/how-terraform-works#terraform-plugin-protocol). It offers improvements and new features from [Teraform Plugin SDKv2](/plugin/sdkv2/sdkv2-intro).
+The plugin framework is a new way to develop Terraform Plugins on [protocol version 6](/plugin/how-terraform-works#protocol-version-6). It offers improvements and new features from [Teraform Plugin SDKv2](/plugin/sdkv2/sdkv2-intro).
 
 ~> **Important**: [Which SDK Should I Use?](/plugin/which-sdk) explains the differences between [Teraform Plugin SDKv2](/plugin/sdkv2/sdkv2-intro) and Terraform Plugin Framework to help you decide which option is right for your provider.
 
