--- a/content/plugin/sdkv2/sdkv2-intro.mdx
+++ b/content/plugin/sdkv2/sdkv2-intro.mdx
@@ -5,7 +5,7 @@ description: Learn about version 2 of the Terraform Plugin SDK.
 
 # Terraform Plugin SDKv2
 
-Terraform Plugin SDKv2 is an established way to develop Terraform Plugins on [protocol version 5](/plugin/how-terraform-works#terraform-plugin-protocol).
+Terraform Plugin SDKv2 is an established way to develop Terraform Plugins on [protocol version 5](/plugin/how-terraform-works#protocol-version-5).
 
 ~> **Important**: [Which SDK Should I Use?](/plugin/which-sdk) explains the differences between Terraform Plugin SDKv2 and [Terraform Plugin Framework](/plugin/framework) to help you decide which option is right for your provider.
 
@@ -33,5 +33,5 @@ Terraform Plugin SDKv2 is an established way to develop Terraform Plugins on [pr
 
 The [terraform-plugin-framework](/plugin/framework) is a new way to develop Terraform providers, offering improvements and new features from Terraform Plugin SDKv2. You can refactor individual resources and data sources over time with the following compatibility:
 
-* Terraform 0.12 and later: First [translate your provider](/plugin/mux/translating-protocol-version-6-to-5) into a protocol version 5 provider. Then [combine your provider](/plugin/mux/combining-protocol-version-5-providers) with the translated provider. You will not be able to use [protocol version 6](/plugin/how-terraform-works#protocol-version-6) features.
+* Terraform 0.12 and later: First, [translate your provider](/plugin/mux/translating-protocol-version-6-to-5) into a protocol version 5 provider. Then [combine your provider](/plugin/mux/combining-protocol-version-5-providers) with the translated provider. You will not be able to use [protocol version 6](/plugin/how-terraform-works#protocol-version-6) features.
 * Terraform 1.0 and later: First, [translate your provider](/plugin/mux/translating-protocol-version-5-to-6) into a protocol version 6 provider. Then [combine your provider](/plugin/mux/combining-protocol-version-6-providers) with the translated provider.
