--- a/content/plugin/mux/translating-protocol-version-5-to-6.mdx
+++ b/content/plugin/mux/translating-protocol-version-5-to-6.mdx
@@ -10,8 +10,8 @@ The [`tf5to6server`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-mu
 
 Use this package to:
 
-* Migrate individual resources and data sources from [terraform-plugin-sdk/v2](/plugin/sdkv2/sdk-intro) to [terraform-plugin-framework](/plugin/framework) over time, while using protocol version 6 features in terraform-plugin-framework.
-* Develop with [terraform-plugin-sdk/v2](/plugin/sdkv2/sdk-intro), but require Terraform CLI 1.0 or later.
+* Migrate individual resources and data sources from [terraform-plugin-sdk/v2](/plugin/sdkv2/sdkv2-intro) to [terraform-plugin-framework](/plugin/framework) over time, while using protocol version 6 features in terraform-plugin-framework.
+* Develop with [terraform-plugin-sdk/v2](/plugin/sdkv2/sdkv2-intro), but require Terraform CLI 1.0 or later.
 
 ## Compatibility
 
