--- a/content/enterprise/before-installing/os-specific/rhel-requirements.mdx
+++ b/content/enterprise/before-installing/os-specific/rhel-requirements.mdx
@@ -31,7 +31,7 @@ Afterwards, restart the Docker service and verify the newly installed version us
 
 ### Can I use the Docker version in the RHEL Extras repository?
 
-Yes! Just be sure to [modify the default `libseccomp` profile](/enterprise/before-installing#option-3-docker-engine-using-a-modified-libseccomp-profile).
+If you are running Red Hat Enterprise Linux v7, yes. Red Hat Enterprise Linux v8 does not offer docker in the extras repo. If you are running v7 and choose to run docker from extras, just be sure to [modify the default `libseccomp` profile](/enterprise/before-installing#option-3-docker-engine-using-a-modified-libseccomp-profile).
 
 ### When I run the installer, it allows me to download and install Docker CE on RedHat. Can I use that?
 
