update gitlab app settings table

--- a/content/cloud-docs/vcs/gitlab-eece.mdx
+++ b/content/cloud-docs/vcs/gitlab-eece.mdx
@@ -83,6 +83,7 @@ Leave the page open in a browser tab. In the next step you will copy values from
    | Name                    | Terraform Cloud (`<YOUR ORGANIZATION NAME>`)   |
    | Redirect URI            | `https://app.terraform.io/<YOUR CALLBACK URL>` |
    | Confidential (checkbox) | ✔️ (enabled)                                   |
+   | Expire access tokens (checkbox) | ✘ (disabled)                           |
    | Scopes (all checkboxes) | api                                            |
 
 1. Click the "Save application" button, which creates the application and takes you to its page.
